DevOps/force-app/main/default/objects/Case_Review__c/Case_Review__c.object-meta.xml
<CustomObject>
    <description>Use this object to record case reviews</description>
    <label>Case Review</label>
    <nameField>
        <displayFormat>CR-{0000000}</displayFormat>
        <label>Case Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>