DevOps/force-app/main/default/objects/Case_Review__c/fields/Case_Plan_Goals__c.field-meta.xml
<CustomField>
    <fullName>Case_Plan_Goals__c</fullName>
    <label>Case Plan Goals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>