DevOps/force-app/main/default/objects/Case_Review__c/fields/Contact_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Contact_Frequency__c</fullName>
    <label>Contact Frequency</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>