DevOps/force-app/main/default/objects/Case_Review__c/fields/CSAT_Survey_Completed_If_Closing__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Survey_Completed_If_Closing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSAT Survey Completed (If Closing)</label>
    <type>Checkbox</type>
</CustomField>