DevOps/force-app/main/default/objects/Case_Review__c/fields/Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Situation__c</fullName>
    <label>Current Situation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>