DevOps/force-app/main/default/objects/Case_Review__c/fields/Date_Of_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Review__c</fullName>
    <label>Date of Review</label>
    <type>Date</type>
</CustomField>