DevOps/force-app/main/default/objects/Case_Review__c/fields/General_Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Comments_Notes__c</fullName>
    <label>General Comments/Notes</label>
    <length>31000</length>
    <type>Html</type>
</CustomField>