DevOps/force-app/main/default/objects/Case_Review__c/fields/Initial_Outcome_Star_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Outcome_Star_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Outcome Star Completed</label>
    <type>Checkbox</type>
</CustomField>