DevOps/force-app/main/default/objects/Case_Review__c/fields/Multidisciplinary_Review__c.field-meta.xml
<CustomField>
    <fullName>Multidisciplinary_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multidisciplinary Review</label>
    <type>Checkbox</type>
</CustomField>