DevOps/force-app/main/default/objects/Case_Review__c/fields/Number_of_Outcomes_Star_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Outcomes_Star_Completed__c</fullName>
    <label>Number of Outcomes Star Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>