DevOps/force-app/main/default/objects/Case_Review__c/fields/Program_Worker__c.field-meta.xml
<CustomField>
    <fullName>Program_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>