DevOps/force-app/main/default/objects/Case_Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>