DevOps/force-app/main/default/objects/Case_Review__c/fields/Risks__c.field-meta.xml
<CustomField>
    <fullName>Risks__c</fullName>
    <label>Risks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>