DevOps/force-app/main/default/objects/Case_Review__c/fields/Specialist_Reviewer_2__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Reviewer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialist Reviewer 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Reviews3</relationshipName>
    <type>Lookup</type>
</CustomField>