DevOps/force-app/main/default/objects/Case_Review__c/fields/Specialist_Reviewer_3__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Reviewer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialist Reviewer 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Reviews4</relationshipName>
    <type>Lookup</type>
</CustomField>