DevOps/force-app/main/default/objects/Case_Review__c/recordTypes/Case_Review.recordType-meta.xml
<RecordType>
    <fullName>Case_Review</fullName>
    <active>true</active>
    <label>Case Review</label>
</RecordType>